[tool.poetry]
name = "cad_tickers"
version = "1.0.0"
description = "Various Stock Utilties Created by me"
authors = ["David Li <davidli012345@gmail.com>"]
maintainers = ["David Li <davidli012345@gmail.com>"]
license = "MIT"
readme = "ReadMe.md"
repository = "https://github.com/FriendlyUser/cad_tickers"
documentation = "https://readthedocs.org/projects/cad-tickers/"
keywords = ["Poetry",
            "Stock Tickers",
            "Requests",
            "CSE",
            "TSX"]

include = [
  "cad_tickers/data_files",
  "cad_tickers/data_files/references.csv"
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
coverage = "^5.2"
beautifulsoup4 = "^4.9.1"
lxml = "^4.5.2"
pandas = "^1.0.5"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.1.2"
pytest-cov = "^2.10.1"
sphinx_rtd_theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"